<resources>
    <string name="app_name">Workshop Adda</string>
    <string name="tab_layout">Tab layout</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="application_icon">Application icon</string>
    <string name="intro_images">Intro images</string>

    <string name="intro_title_1">Workshop Schedule</string>
    <string name="intro_title_2">Resources</string>
    <string name="intro_title_3">Feedback</string>
    <string name="intro_title_4">Community</string>
    <string name="intro_des_1">See upcoming workshops and register in-app.</string>
    <string name="intro_des_2">Access workshop materials.</string>
    <string name="intro_des_3">Rate and leave comments on workshops attended.</string>
    <string name="intro_des_4">Connect and collaborate with other attendees.</string>
    <string name="guest">Guest</string>
    <string name="please_wait">Please wait</string>
    <string name="back">Back</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email id and password to log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Dosen\'t have an account?</string>
    <string name="enter_your_email_and_password_to_register_with_us">Enter your name, email id and password to register with us.</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="please_fill_all_the_required_fields">Please fill all the required fields.</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="wrong_email_or_password_added">Wrong email id or password added</string>
    <string name="no_such_user_exist">No such user exist.</string>
    <string name="view_pager">View pager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_haven_t_registered_for_any_workshop_yet">You haven\'t registered for any workshop yet.</string>
    <string name="dashboard">Dashboard</string>
    <string name="workshops">Workshops</string>
    <string name="user_name">User name</string>
    <string name="workshops_applied">Workshops Applied</string>
    <string name="line">Line</string>
    <string name="workshop_image">Workshop image</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="remove">Remove</string>
    <string name="sign_out">Sign out</string>
</resources>