<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="12dp"
    android:elevation="10dp"
    android:background="@drawable/ic_upper_card_view">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/workshop_image_iv"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:theme="@style/curvedImageView"
        tools:src="@drawable/workshop_image_id_zero"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:elevation="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/workshop_image_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/workshop_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Painting with Watercolors"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/saklifie"/>
        <TextView
            android:id="@+id/workshop_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:text="Master the advanced features of Microsoft Excel and become proficient in data analysis and visualization."
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textSize="14sp"
                    android:textColor="#393838"/>
                <TextView
                    android:id="@+id/from_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    tools:text="May 17"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="14sp"
                    android:textColor="#393838"/>
                <TextView
                    android:id="@+id/to_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    tools:text="May 31"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:background="@color/green"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>